<resources>
    <string name="app_name">Kindergartern</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">输入手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone">电话号码不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入内容</string>
    <string name="mobile_num">手机号码</string>
    <string name="parents_name">家长姓名</string>
    <string name="relation_ship_parents">与孩子关系</string>
    <string name="baby_name">宝宝姓名</string>
    <string name="school">学校</string>
    <string name="save">保存</string>

    <string name="send_msg_local_tip">所在位置</string>
    <string name="send_msg_open_tip">私有日志</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="sure">确认</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
