<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context="com.junbaole.kindergartern.presentation.register.RealInfoActivity">

        <include layout="@layout/titlebar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/style_register_title"
                    android:text="@string/mobile_num" />

                <EditText
                    style="@style/style_register_value"
                    android:hint="请输入您的手机号码"
                    android:background="@null" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:background="@color/white" />

                <TextView
                    style="@style/style_register_title"
                    android:text="@string/parents_name" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/style_register_value"
                        android:layout_weight="1.0"
                        android:hint="请输入您的姓名"
                        android:background="@null" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@mipmap/icon_zhengque"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:background="@color/white" />
                <TextView
                    style="@style/style_register_title"
                    android:text="@string/relation_ship_parents" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/style_register_value"
                        android:layout_weight="1.0"
                        android:hint="请选择"
                        android:background="@null" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@mipmap/icon_zhengque"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:background="@color/white" />
                <TextView
                    style="@style/style_register_title"
                    android:text="@string/baby_name" />

                <EditText
                    style="@style/style_register_value"
                    android:hint="您宝宝的姓名"
                    android:background="@null" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:background="@color/white" />
                <TextView
                    style="@style/style_register_title"
                    android:text="@string/school" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/style_register_value"
                        android:layout_weight="1.0"
                        android:hint="您宝宝的学校名称"
                        android:background="@null" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@mipmap/icon_zhengque"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:background="@color/white" />
                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="20dp"
                    android:alpha="0.6"
                    android:background="@mipmap/button_yellow_z"

                    android:text="@string/save"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>